--- a/PPG Project/Config/DefaultInput.ini
+++ b/PPG Project/Config/DefaultInput.ini
@@ -84,6 +84,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="CameraSwitch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Aim",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="ChangeTypeOfProjectile",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
