--- a/PPG Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PPG Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -263,9 +263,9 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.CameraSwitch,InputSettings.Bindings.ActionMappings.ChangeTypeOfProjectile,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.Test,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.WheelUp,InputSettings.Bindings.AxisMappings.WheelDown,InputSettings.Bindings.AxisMappings.ZoomCamera,InputSettings.Bindings.AxisMappings.Go,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.CameraSwitch,InputSettings.Bindings.ActionMappings.ChangeTypeOfProjectile,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.Test,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.WheelUp,InputSettings.Bindings.AxisMappings.WheelDown,InputSettings.Bindings.AxisMappings.ZoomCamera,InputSettings.Bindings.AxisMappings.Go,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
+WorldPartitionRuntimeSpatialHash=
 BlendSpace=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.Axis Settings.Horizontal Axis
-SkeletalMeshComponent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+SkeletalMeshComponent=
 BP_PlayerCharacter_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 K2Node_VariableGet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 K2Node_InputKey=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform
@@ -308,7 +308,7 @@ LastLevel=/Game/Level1
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
@@ -1764,10 +1764,10 @@ FractureSelectionSettings.MouseInteraction=True
 FractureSelectionSettings.FilterSettings=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/BP_PlayerCharacter.BP_PlayerCharacter
 OpenAssetsAtExit=/Game/Blueprints/Aiming_BS.Aiming_BS
-OpenAssetsAtExit=/Game/Blueprints/Objects/BP_TEWRAWRAR.BP_TEWRAWRAR
+OpenAssetsAtExit=/Game/Blueprints/Objects/BP_Destructive.BP_Destructive
 OpenAssetsAtExit=/Game/Blueprints/BP_Projectile_Timed.BP_Projectile_Timed
 OpenAssetsAtExit=/Game/Blueprints/BP_Projectile.BP_Projectile
 
@@ -2066,8 +2066,8 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=378.667 Y=22.667
-WindowSize=X=1328.000 Y=768.000
+ScreenPosition=X=372.667 Y=22.667
+WindowSize=X=1330.000 Y=770.000
 InitiallyMaximized=True
 
 [Directories2]
