--- a/PPG Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PPG Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -269,21 +269,21 @@ SkeletalMeshComponent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Tra
 BP_PlayerCharacter_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 K2Node_VariableGet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 K2Node_InputKey=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform
-K2Node_VariableSet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+K2Node_VariableSet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 PropertyWrapper=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 CapsuleComponent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform
 LandscapeStreamingProxy=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,Landscape.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,PropertyWrapper.DefaultValueCategory.itemData
 SceneComponent=
 K2Node_MacroInstance=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
-K2Node_CustomEvent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup
+K2Node_CustomEvent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 Landscape=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,Landscape.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 StaticMeshActor=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,Landscape.TransformCommon.Transform
 K2Node_InputAxisEvent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform
 ExponentialHeightFog=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup
 StaticMeshComponent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
-K2Node=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform
-EdGraphNode_Comment=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
-CharacterMovementComponent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+K2Node=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+EdGraphNode_Comment=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+CharacterMovementComponent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 WorldDataLayers=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,Landscape.TransformCommon.Transform
 PlayerController=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform
 VolumetricCloud=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,Landscape.TransformCommon.Transform
@@ -314,6 +314,7 @@ BPS_Player_Stats_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Transf
 EdGraphNode=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 WB_HUD_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 BPC_Player_Stats_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+K2Node_Variable=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 
 [EditorStartup]
 LastLevel=/Game/Level1
@@ -321,15 +322,15 @@ LastLevel=/Game/Level1
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.Font\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
-PrimitiveComponent="\"Object\" "
-SceneComponent="\"Object\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ActorComponent="\"Object\" "
-CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SpringArmComponent="\"Object\" "
 CameraComponent="\"Object\" "
 CharacterMovementComponent="\"Object\" "
@@ -608,8 +609,8 @@ TextureRenderTarget2D="\"Object\" "
 TextureRenderTarget="\"Object\" "
 Texture="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.Font\" "
+Visual="\"Object\" \"Object.Appearance.Font\" "
 PaperSpriteComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Texture2D="\"Object\" "
 GeometryCollectionActor="\"Object.Destruction.GeometryCollectionComponent.Object.ChaosPhysics.ChaosPhysics|General\" \"Object.Destruction.GeometryCollectionComponent.Object.ChaosPhysics.ChaosPhysics|Collisions\" \"Object.Destruction.GeometryCollectionComponent.Object.ChaosPhysics.ChaosPhysics|Events\" \"Object.Destruction.GeometryCollectionComponent.Object.Collision.BodyInstance\" "
