Fixed equipment system

--- a/PPG Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PPG Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -263,7 +263,7 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.CameraSwitch,InputSettings.Bindings.ActionMappings.ChangeTypeOfProjectile,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Interaction,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.Test,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.WheelUp,InputSettings.Bindings.AxisMappings.WheelDown,InputSettings.Bindings.AxisMappings.ZoomCamera,InputSettings.Bindings.AxisMappings.Go,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.CameraSwitch,InputSettings.Bindings.ActionMappings.ChangeTypeOfProjectile,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Interaction,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.Test,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.WheelUp,InputSettings.Bindings.AxisMappings.WheelDown,InputSettings.Bindings.AxisMappings.ZoomCamera,InputSettings.Bindings.AxisMappings.Go,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
+WorldPartitionRuntimeSpatialHash=
 BlendSpace=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.Axis Settings.Horizontal Axis
 SkeletalMeshComponent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 BP_PlayerCharacter_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
@@ -307,7 +307,7 @@ BoxComponent=BoxComponent.Physics.ConstraintsGroup
 PaperSpriteComponent=
 BP_Weapon_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 K2Node_BreakStruct=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
-BPC_EquipmentSystem_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+BPC_EquipmentSystem_C=
 K2Node_FunctionEntry=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 K2Node_CallFunction=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 BPS_Player_Stats_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
@@ -318,7 +318,7 @@ K2Node_Variable=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Transform
 K2Node_FunctionResult=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 WB_Equipable_Slot_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 WB_Equipment_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
-WB_Item_Slot_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+WB_Item_Slot_C=
 
 [EditorStartup]
 LastLevel=/Game/Level1
@@ -326,7 +326,7 @@ LastLevel=/Game/Level1
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -612,9 +612,9 @@ SceneCaptureComponent="\"Object\" "
 TextureRenderTarget2D="\"Object\" "
 TextureRenderTarget="\"Object\" "
 Texture="\"Object\" "
-Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" "
-Widget="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" "
-Visual="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" "
+Widget="\"Object\" \"Object.Layout.Slot\" "
+Visual="\"Object\" \"Object.Layout.Slot\" "
 PaperSpriteComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Texture2D="\"Object\" "
 GeometryCollectionActor="\"Object.Destruction.GeometryCollectionComponent.Object.ChaosPhysics.ChaosPhysics|General\" \"Object.Destruction.GeometryCollectionComponent.Object.ChaosPhysics.ChaosPhysics|Collisions\" \"Object.Destruction.GeometryCollectionComponent.Object.ChaosPhysics.ChaosPhysics|Events\" \"Object.Destruction.GeometryCollectionComponent.Object.Collision.BodyInstance\" "
@@ -635,7 +635,7 @@ CanvasPanel="\"Object\" \"Object.Layout.Slot\" "
 PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" "
 ProgressBar="\"Object\" "
 WB_HUD_C="\"Object\" "
-UserWidget="\"Object\" "
+UserWidget="\"Object\" \"Object.Layout.Slot\" "
 BPC_Player_Stats_C="\"Object\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" "
@@ -646,7 +646,7 @@ SizeBox="\"Object\" \"Object.Layout.Slot\" "
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" "
 WB_Equipable_Slot_C="\"Object\" "
 WB_Item_Slot_C="\"Object\" "
-WB_Equipment_C="\"Object\" "
+WB_Equipment_C="\"Object\" \"Object.Layout.Slot\" "
 HorizontalBox="\"Object\" \"Object.Layout.Slot\" "
 
 [DetailCategories]
@@ -2174,9 +2174,22 @@ HorizontalBox.Performance=True
 HorizontalBox.Clipping=True
 HorizontalBox.Navigation=True
 HorizontalBox.Localization=True
+WB_Equipment_C.Default=True
+WB_Equipment_C.Appearance=True
+WB_Equipment_C.Input=True
+WB_Equipment_C.Interaction=True
+WB_Equipment_C.Designer=True
+WB_Equipment_C.Performance=True
+WB_Equipment_C.Layout=True
+WB_Equipment_C.Behavior=True
+WB_Equipment_C.Render Transform=True
+WB_Equipment_C.Localization=True
+WB_Equipment_C.Accessibility=True
+WB_Equipment_C.Clipping=True
+WB_Equipment_C.Navigation=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/BP_PlayerCharacter.BP_PlayerCharacter
 OpenAssetsAtExit=/Game/Equipment_System/S_Slots.S_Slots
 OpenAssetsAtExit=/Game/Equipment_System/BPC_EquipmentSystem.BPC_EquipmentSystem
@@ -2237,7 +2250,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Equipment_System/UI
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -2456,6 +2469,8 @@ SkeletalMeshComponent.ComponentTick=False
 /Game/Blueprints/BPC_Player_Stats.BPC_Player_Stats=0
 /Game/UI/WB_HUD.WB_HUD=0
 /Game/Equipment_System/UI/WB_Equipable_Slot.WB_Equipable_Slot=0
+/Game/Equipment_System/UI/WB_Item_Slot.WB_Item_Slot=0
+/Game/Equipment_System/UI/WB_Equipment.WB_Equipment=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2504,7 +2519,7 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=0.000
-WindowSize=X=1340.000 Y=780.000
+WindowSize=X=1342.000 Y=782.000
 InitiallyMaximized=True
 
 [Directories2]
